src/pages/project.css
.project {
  display: flex;
  flex-direction: row;
  gap: var(--big-padding);
  padding: 0 var(--big-padding);

  margin-top: 10vh;
  height: unset;
}

.project-info,
.project-images {
  width: 50%;
  height: 100%;
  padding: var(--big-padding);

  display: flex;
  flex-direction: column;
  gap: var(--big-padding);
}

.project-title {
  width: 100%;
  font-family: var(--main);
  font-size: 40pt;
  font-weight: 800;
}

.project-description {
  text-align: left;
}

.project-images {
  overflow-y: auto;
  display: flex;
  flex-flow: row wrap;
  gap: var(--small-padding);
  padding-left: 0;
}

.project-images::-webkit-scrollbar {
  display: none;
}

.new-project-image {
  width: 45%;
  height: fit-content;
}

@media screen and (max-width: 960px) {
  .project {
    flex-direction: column;
    gap: var(--small-padding);
    padding: 0 var(--small-padding);
  }

  .project-info {
    width: 100%;
    padding: 0px;
    padding-top: var(--small-padding);
    gap: var(--small-padding);
  }

  .project-title {
    font-size: 22pt;
  }

  .project-images {
    width: 100vw;
    flex-direction: column;
    align-items: center;
    margin-left: -30px;
    margin-bottom: var(--big-padding);
  }

  .new-project-image {
    width: 80%;
  }
}

